style/style.css
:root {
    --background-color: white;
    --base-text-color: #303030;
    --title-color: #101010;
    --footer-color: #f8f8f8;
    --steelers-black: #101820;
    --steelers-yellow: #FFB612;
    --uw-purple: #32006e;
    --cmu-red: #990000;
}

.darkmode {
    --background-color: #161616;
    --base-text-color: #A0A0A0;
    --title-color: #b9b9b9;
    --footer-color: #222;
    --steelers-black: #a5acaf;
    --uw-purple: #a98bcdff;
    --cmu-red: #ff5f5f;
}

body {
    padding: 0px;
    margin: 0px;
    background-color: var(--background-color);
    color: var(--base-text-color);
    font-weight: 300;
}

#main-body {
    margin: 8px;
    padding: 50px;
    width: auto;
}

@media screen and (max-width: 1080px) {
    #main-body {
        padding: 0px;
    }
}

footer {
    background-color: var(--footer-color);
}

#title {
    color: var(--title-color);
    text-decoration: none;
    font-family: 'Noto Sans JP', sans-serif;
}

h1 {
    font-size: 28px;
    color: var(--title-color);
    font-weight: 450;
}

h2 {
    font-family: 'Noto Sans JP', sans-serif;
    font-size: 24px;
    padding-left: 1%;
    border-bottom: 2px;
    color: var(--title-color);
    font-weight: 450;
    margin-top: 1%;
    margin-bottom: 1%;
}

p {
    font-family: 'Noto Sans JP', sans-serif;
    font-size: 18px;
    padding-left: 1%;
    line-height: 1.75;
    margin-top: 1%;
    margin-bottom: 1%;
}

.bold {
    color: var(--title-color);
    font-weight: 350;
}

.boldlink {
    font-weight: 350;
}

.black {
    color: var(--steelers-black);
}

.yellow {
    color: var(--steelers-yellow);
}

.code {
    font-family: 'Noto Sans Mono', monospace;
    font-size: 16px;
    line-height: 1.5;
    color: var(--uw-purple);
    font-weight: 325;
    background-color: var(--footer-color);
    padding: 0.5% 0.5%;
}

a {
    font-family: 'Noto Sans JP', sans-serif;
    text-decoration: none;
    color: var(--uw-purple);
}

a:hover {
    text-decoration: underline;
}

.cleanul {
    list-style-type: none;
    padding-left: 0%;
    margin-top: 2%;
    margin-bottom: 1%
}

li {
    font-family: 'Noto Sans JP', sans-serif;
    font-size: 18px;
    padding: 1%;
    line-height: 1.5;
}

header {
    margin: auto;
    width: 55%;
}

div {
    margin: auto;
    width: 55%;
}

section {
    padding: 1%;
    padding-top: 2%;
}

td {
    padding: 2%;
    font-weight: 300;
}

.publicationtitle {
    padding: 0;
    margin: 8px;
    line-height: 1;
    font-weight: 375;
    text-decoration: none;
    color: var(--title-color);
}

.cmu {
    padding: 0;
    margin: 0;
    line-height: 1;
    font-weight: 325;
    color: var(--cmu-red);
}

.normallink {
    color: var(--title-color);
    font-weight: 300;
}

.funlink {
    color: var(--title-color);
    font-weight: 300;
    text-decoration: underline;
}

.funlink:hover {
    text-decoration: none;
}

.funpurplelink {
    text-decoration: underline;
}

.funpurplelink:hover {
    text-decoration: none;
}

.publicationauthors {
    padding: 0;
    margin: 8px;
    font-size: 16px;
    color: var(--base-text-color);
    line-height: 1;
}

.publicationform {
    padding: 0;
    margin: 8px;
    font-size: 16px;
    color: var(--base-text-color);
    line-height: 1;
}

.tooltip {
    margin: 0;
    width: 100%;
    position: relative;
}

.tooltip .tooltiptext {
    display: none;
    width: 100%;
    background-color: var(--background-color);
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;
    font-family: 'Noto Sans JP', sans-serif;
    font-size: 16px;
    
    /* Position the tooltip */
    position: absolute;
    top: 45%;
    left: 95%;
}

.tooltip:hover .tooltiptext {
    display: block;
}

.imagetooltip {
    display: inline-block;
    color: var(--title-color);
    text-decoration: underline;
}

.imagetooltip .tooltipimage {
    display: none;
    max-width: 25%;
    width: 500px;
    height: auto; /* Maintain aspect ratio */
    width: auto; /* Maintain aspect ratio */
    position: absolute;
    background-color: var(--background-color);
    border: 1px solid var(--footer-color);
    box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.25);
    padding: 5px;
    z-index: 10;
    transform: translateY(-110%);
}

@media screen and (max-width: 1080px) {
    .imagetooltip .tooltipimage {
        display: none;
        max-width: 70%;
        width: 500px;
        height: auto; /* Maintain aspect ratio */
        width: auto; /* Maintain aspect ratio */
        position: absolute;
        background-color: var(--background-color);
        border: 1px solid var(--footer-color);
        padding: 5px;
        z-index: 10;
        transform: translateY(-110%);
    }
    }

.imagetooltip:hover .tooltipimage {
    display: block;
}

.imagetooltip:hover {
    text-decoration: none;
}

.button {
  background-color: var(--background-color);
  border: none;
  color: var(--title-color);
  padding: 0;
  cursor: pointer;
  font-family: 'Noto Sans JP', sans-serif;
  font-size: 18px;
  line-height: 1.75;
  font-weight: 325;
}

.zerocolumn {
    display: none;
    margin: auto;
    width: 80%;
    max-width: 400px
}

.firstcolumn {
    width: 50%;
}

.secondcolumn {
    width: 30%;
    min-width: 375px;
}

@media screen and (max-width: 1080px) {
    .zerocolumn {
        display: block;
        margin-bottom: 5%;
    }
}

@media screen and (max-width: 1080px) {
    .firstcolumn {
        width: 100%;
    }
}

@media screen and (max-width: 1080px) {
    .secondcolumn {
        display: none;
    }
}

@media screen and (max-width: 1080px) {
    header {
        margin: auto;
        width: 95%;
    }
}

@media screen and (max-width: 1080px) {
    div {
        margin: auto;
        width: 95%;
    }
}

.animation {
    display: none; 
    margin-left: auto; 
    margin-right: auto;
    width: 500px;
    max-width: 100%;
    box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.25);
}

@media screen and (max-width: 1080px) {
    .animation {
        max-width: 100%;
        width: 500px;
    }
}

.footer {
    margin: auto;
    padding-top: 3%;
    padding-bottom: 3%;
    background-color: var(--footer-color);
    width: 95%;
}

#switch {
    background-color: var(--footer-color);
    border: none;
}

